# sandbox-security

./: .gitignore  README.md  pyproject.toml
cli/: __init__.py  main.py
docs/plans/: 2026-03-19-sandbox-security-design.md  2026-03-19-sandbox-security-implementation.md
sandbox_core/: __init__.py  config.py  runner.py
sandbox_core/runtime/: __init__.py  base.py  docker_runtime.py  factory.py  process_runtime.py
sandbox_core/verifier/: __init__.py  env_verifier.py  resource_verifier.py  whitelist_verifier.py
tests/: test_env_verifier.py  test_integration.py  test_resource_verifier.py  test_runner.py  test_security.py  test_whitelist_verifier.py
web/: api.py
web/static/: index.html
